tree-sitter/tree-sitter-agda/corpus/declaration/abstract.txt
==================
Abstract
==================

abstract
  f : A g
  f = f g

---

(source_file
  (abstract
    (function
      (lhs (function_name (atom (qid))))
      (rhs
        (expr (atom (qid)) (atom (qid)))))
    (function
      (lhs
        (atom (qid)))
      (rhs
        (expr (atom (qid)) (atom (qid)))))
  )
)
