tree-sitter/tree-sitter-agda/corpus/declaration/postulate.txt
==================
Postulate
==================

postulate
  f : A g

---

(source_file
  (postulate
    (function
      (lhs (function_name (atom (qid))))
      (rhs
        (expr (atom (qid)) (atom (qid)))))
  )
)
