tree-sitter/tree-sitter-agda/corpus/declaration/primitive.txt
==================
Primitive
==================

primitive
  primWord64ToNat : Word64 → Nat

---

(source_file
  (primitive
    (type_signature
      (field_name)
      (expr (atom (qid)) (expr (atom (qid)))))
  )
)
