tree-sitter/tree-sitter-agda/corpus/declaration/syntax.txt
==================
Syntax
==================

syntax bind e₁ (λ x → e₂) = x ← e₁ , e₂

---

(source_file
  (syntax (id)
    (hole_names
      (hole_name (id))
      (hole_name (bid) (id)))
    (id)
    (id)
    (id)
    (id)
    (id)
    ))
